src/app/globals.css
@import url("https://fonts.googleapis.com/css2?family=Recursive:wght@400;700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:wght@400;700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Ballet&display=swap");
@import url("https://fonts.googleapis.com/css2?family=DM+Mono&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Frijole&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Michroma&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Unkempt&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Antonio&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Monoton&display=swap");
@import "tailwindcss";
@import "tw-animate-css";
@custom-variant dark (&:where(.dark, .dark *));

* {
  scrollbar-width: thin;
  scrollbar-color: #280134 #c2bccb;
}

/* Para navegadores Webkit (Chrome, Safari, Edge) */
*::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

*::-webkit-scrollbar-track {
  background: #c7c1d3;
  border-radius: 10px;
}

*::-webkit-scrollbar-thumb {
  background: linear-gradient(45deg, #2a033e, #25022f);
  border-radius: 10px;
  border: 1px solid #222;
}

*::-webkit-scrollbar-thumb:hover {
  background: linear-gradient(45deg, #ff6b35, #ff9500);
}

*::-webkit-scrollbar-corner {
  background: #050011;
}

.font-recursive {
  font-family: "Recursive", sans-serif;
}

.font-libre {
  font-family: "Libre Caslon Text", serif;
}

.font-ballet {
  font-family: "Ballet", cursive;
}

.font-dmmono {
  font-family: "DM Mono", monospace;
}

.font-pixel {
  font-family: "Pixelify Sans", cursive;
}

.font-glich {
  font-family: "Rubik Glitch", cursive;
}

.font-providence {
  font-family: "Fuzzy Bubbles", cursive;
}

.font-frijole {
  font-family: "Frijole", cursive;
}

.font-michroma {
  font-family: "Michroma", sans-serif;
}

.font-virthday {
  font-family: "Unkempt", cursive;
}

.font-virthday3 {
  font-family: "Permanent Marker", cursive;
}

.font-montserrat {
  font-family: "Montserrat Alternates", sans-serif;
}

.font-pressgame {
  font-family: "Press Start 2P", monospace;
}

.font-rock {
  font-family: "Rock Salt", cursive;
}

.font-indie {
  font-family: "Indie Flower", cursive;
}

.font-antonio {
  font-family: "Antonio", sans-serif;
}

.font-monoton {
  font-family: "Monoton", cursive;
}



.bg-main {
  background-image: url("/Wallpapers/BackgroundHOME_VercelBA2.webp");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.bg-polaroid {
  background-image: url("/Polaroid/Background_PolaroidBA.webp");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.bg-photostrip {
  background-image: url("/Photobooth/photobooth_bg.webp");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.bg-sugaverse {
  background-image: url("/Sugaverse/bg.gif");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.bg-hobipalooza {
  background-image: url("/Hobipalooza/jhope2.gif");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.bg-virthday {
  background-image: url("/Virthday/vwallpaper.webp");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.bg-virthday2 {
  background-image: url("/Virthday/albumcover.webp");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.bg-lovenotes {
  background-image: url("/LoveNotes/BackgroundBalenTinS.webp");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.bg-rps {
  background-image: url("/RPS/RPS\ \(2\).webp");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.bg-rps1 {
  background-image: url("/RPS/RPS\ \(2\).webp");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.bg-tetris {
  background-image: url("/Tetris/BT21.png");
  background-size: cover;
  background-position: left;
  background-repeat: no-repeat;
}

.bg-tetris2 {
  background-image: url("/Tetris/BT21-2.png");
  background-size: fill;
  background-position: center;
  background-repeat: no-repeat;
}

.bg-tetris3 {
  background-image: url("/Tetris/BT21-3.png");
  background-size: fill;
  background-position: center;
  background-repeat: no-repeat;
}

.bg-tetris4 {
  background-image: url("/Tetris/BGWeb.webp");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.bg-tetris5 {
  background-image: url("/Tetris/BGMobile.webp");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.bg-bingo {
  background-image: url("/BillionGoal/blue.webp");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.bg-arirangRedTag {
  background-image: url("/arirang/redtags.webp");
  background-repeat: repeat-x;
}

.bg-arirangRedTag2 {
  background-image: url("/arirang/redTag.webp");
  background-repeat: repeat-x;
}

.bg-arirangWhiteTag {
  background-image: url("/arirang/whiteTag.webp");
  background-repeat: repeat-x;
}
/* ... */

